clusters/homelab/apps/bazarr/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bazarr
  namespace: media
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: octelium
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: bazarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: bazarr-reconcile
      ports:
        - protocol: TCP
          port: 6767
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bazarr-config-backup
  namespace: media
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: bazarr-config-backup
  policyTypes: [Ingress, Egress]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bazarr-reconcile
  namespace: media
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: bazarr-reconcile
  policyTypes: [Ingress]
